# yasio

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CNAME  LICENSE  Makefile  README.md  README_EN.md  appveyor.yml  benchmark.md  build.bat  build.ps1  cleanup-msvc-tmp.bat  del-tmp.bat  git-commit.bat  index.html  manifest.json  mkdocs.yaml  mkdocs.yml  version.md  version.txt  versions.json  xxsocket.xsdb  xxsocket.xsdf  xxsocket.xsxproj  yasio.pc  yasio.xsxproj
examples/lua/: CMakeLists.txt  example.lua  example_lua.xsxproj  main.cpp  protocol_enc.lua
examples/lua/ext/: http_client.lua
examples/lua/scripts/: example.lua  http_client.lua  protocol_base.lua  protocol_dec.lua  protocol_enc.lua  protocol_enums.lua
examples/lua/scripts/yasio_lext/: http_client.lua
extensions/yasio_http/: .clang-format  CMakeLists.txt  HttpClient.cpp  HttpClient.h  HttpCookie.cpp  HttpCookie.h  HttpRequest.h  HttpResponse.h  Uri.cpp  Uri.h  yasio_http.cpp
extensions/yasio_http/utils/: concurrent_deque.h  fast_split.hpp
extensions/yasio_kcp/: CMakeLists.txt
test/cpptest/: CMakeLists.txt  cpptest.cpp  kcptest.cpp
tests/echo_client/: CMakeLists.txt  main.cpp
tests/echo_server/: CMakeLists.txt  main.cpp
tests/http/: CMakeLists.txt  main.cpp
tests/icmp/: CMakeLists.txt  main.cpp
tests/issue166/: CMakeLists.txt  main.cpp
tests/issue178/: CMakeLists.txt  main.cpp
tests/issue201/: CMakeLists.txt  main.cpp
tests/issue208/: CMakeLists.txt  main.cpp
tests/issue245/: CMakeLists.txt  main.cpp
tests/issue256/: CMakeLists.txt  main.cpp
tests/issue377/: CMakeLists.txt  main.cpp
tests/issue384/: CMakeLists.txt  main.cpp
tests/kcp/: CMakeLists.txt  main.cpp
tests/mcast/: CMakeLists.txt  main.cpp
tests/mcast2/: CMakeLists.txt  main.cpp
tests/mtu/: CMakeLists.txt  main.cpp
tests/perf/: CMakeLists.txt  main.cpp  pod_vector.h  xx_podvector.h
tests/speed/: CMakeLists.txt  main.cpp
tests/ssl/: CMakeLists.txt  main.cpp
tests/tcp/: CMakeLists.txt  main.cpp
tests/udp_echo_server/: CMakeLists.txt  main.cpp
yasio/: .clang-format  CMakeLists.txt  buffer_alloc.hpp  byte_buffer.hpp  config.hpp  endian_portable.hpp  errc.hpp  eventfd_select_interrupter.hpp  eventfd_select_interrupter.ipp  fsutils.hpp  ibinarystream.cpp  ibinarystream.h  ibstream.cpp  ibstream.h  ibstream.hpp  ikcp.c  io_service.cpp  io_service.hpp  io_watcher.hpp  logging.hpp  lyasio.cpp  lyasio.h  memory.hpp  obinarystream.cpp  obinarystream.h  object_pool.h  object_pool.hpp  object_pool_alloc.hpp  obstream.cpp  obstream.h  obstream.hpp  pipe_select_interrupter.hpp  pipe_select_interrupter.ipp  pod_vector.hpp  ref_ptr.h  ref_ptr.hpp  select_interrupter.hpp  shared_mutex.hpp  singleton.h  singleton.hpp  (+37 more)
yasio/android-cpp/: Android.mk
yasio/android-jsb/: Android.mk
yasio/android-lua/: Android.mk
yasio/android/jni/: Application.mk
yasio/bindings/: lyasio.cpp  lyasio.h  lyasio.hpp  yasio_axlua.cpp  yasio_axlua.hpp  yasio_cclua.cpp  yasio_cclua.h  yasio_cclua.hpp  yasio_jni.cpp  yasio_jni.hpp  yasio_jsb.cpp  yasio_jsb.h  yasio_jsb.hpp  yasio_jsb20.cpp  yasio_jsb20.h  yasio_jsb20.hpp  yasio_ni.cpp  yasio_sol.hpp  yasio_ue4.hpp  yasio_uelua.cpp  yasio_uelua.h
yasio/bindings/java/org/yasio/: AppGlobals.java  cares.java  yasio.java
yasio/bindings/lua/: CMakeLists.txt
yasio/compiler/: feature_test.hpp
yasio/core/: ares.hpp  byte_buffer.hpp  concurrent_queue.hpp  endian_portable.hpp  epoll_io_watcher.hpp  evport_io_watcher.hpp  ibstream.hpp  ifaddrs.hpp  inet_ntop_impl.hpp  io_service.cpp  io_service.hpp  io_watcher.hpp  kqueue_io_watcher.hpp  logging.hpp  mbedtls.inl  object_pool.hpp  object_pool_alloc.hpp  obstream.hpp  openssl_impl.hpp  pipe_select_interrupter.hpp  poll_io_watcher.hpp  ref_ptr.hpp  select_interrupter.hpp  select_io_watcher.hpp  singleton.hpp  socket.hpp  socket_select_interrupter.hpp  ssl.hpp  xxsocket.cpp  xxsocket.hpp
yasio/core/impl/: mbedtls.hpp  openssl.hpp
yasio/cxx17/: feature_test.hpp  memory.hpp  shared_mutex.hpp  string_view.hpp
yasio/detail/: .clang-format  ares.hpp  byte_buffer.hpp  concurrent_queue.hpp  config.hpp  endian_portable.h  endian_portable.hpp  epoll_io_watcher.hpp  errc.hpp  eventfd_select_interrupter.hpp  eventfd_select_interrupter.ipp  evport_io_watcher.hpp  fd_set_adapter.hpp  fp16.hpp  ibstream.hpp  ifaddrs.hpp  ifaddrs.ipp  inet_compat.inl  io_watcher.hpp  kaguya.hpp  kqueue_io_watcher.hpp  logging.hpp  mbedtls.inl  object_pool.cpp  object_pool.h  object_pool.hpp  obstream.hpp  openssl.inl  pipe_select_interrupter.hpp  pipe_select_interrupter.ipp  pod_vector.hpp  politedef.h  poll_fd_set.hpp  poll_io_watcher.hpp  ref_ptr.h  ref_ptr.hpp  select_fd_set.hpp  select_interrupter.hpp  select_io_watcher.hpp  signal_blocker.hpp  (+11 more)
yasio/experimental/: yasio-kcp.cpp  yasio_epoll.cpp  yasio_epoll.h  yasio_iocp.cpp  yasio_iocp.h  yasio_kcp.cpp  yasio_kcp.h  yasio_kcp_test.cpp  yasio_poll.cpp  yasio_poll.h
yasio/impl/: ares.hpp  char_traits.hpp  concurrent_queue.hpp  epoll_io_watcher.hpp  eventfd_select_interrupter.hpp  evport_io_watcher.hpp  fp16.hpp  ifaddrs.hpp  inet_ntop.hpp  kqueue_io_watcher.hpp  lyasio.cpp  mbedtls.hpp  object_pool.hpp  openssl.hpp  pipe_select_interrupter.hpp  pod_vector.hpp  poll_io_watcher.hpp  select_interrupter.hpp  select_io_watcher.hpp  socket.hpp  socket_select_interrupter.hpp  tolua_link.cpp  yasio-ni.cpp  yasio_cclua.cpp  yasio_jsb.cpp  yasio_jsb20.cpp  yasio_ni.cpp
yasio/jni/cocos-jsb/: Android.mk
yasio/jni/cocos-lua/: Android.mk
yasio/jni/cxx/: Android.mk
yasio/jsb/: yasio_jsb.cpp  yasio_jsb.h
yasio/jsb20/: yasio_jsb20.cpp  yasio_jsb20.h
yasio/kaguya/: README.md  kaguya.hpp
yasio/lua/: lyasio.cpp  yasio_cclua.cpp
yasio/moodycamel/: README.md  atomicops.h  readerwriterqueue.h
yasio/platform/: yasio_jni.cpp  yasio_jni.hpp  yasio_ue4.hpp  yasio_unreal.cpp  yasio_unreal.hpp
yasio/sol/: README.md
yasio/sol3/: README.md  forward.hpp  sol.hpp
yasio/stl/: shared_mutex.hpp  string_view.hpp
(+1764 files in other folders)
